--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import 'core/variables';
 @import 'core/mixins';
 @import 'core/functions';
+@import 'components/home';
 @import 'components/header';
 @import 'components/characterCard';
 @import 'components/characterDetail';
