--- a/src/styles/components/_characterList.scss
+++ b/src/styles/components/_characterList.scss
@@ -2,8 +2,10 @@
     &list{
         display: grid;
         grid-template-columns: 1fr 1fr;
+        justify-content: center;
     }
     &item{
-
+        margin: 0;
+        justify-self: center;
     }
 }
