--- a/src/styles/core/_variables.scss
+++ b/src/styles/core/_variables.scss
@@ -1,16 +1,13 @@
 //Font-family
+$seymour:'Seymour One', sans-serif;
 
-//Font-weight
-$regular-weight: 400;
-$semiBold-weight: 600;
-$bold-weight: 700;
-$black-weight: 900;
 //Font-size
 $defaultFontSize: 16;
 
 //Colors
 $black: #000000;
 $white: #ffffff;
-$blue: #1FB0C7;
-$green: #8AAC4D;
-$light-green:rgb(177, 226, 99);
+$blue: #00afc7;
+$dark-blue: #0b4546;
+$green: #52b859;
+$light-green:#c6db4b;
