--- a/src/styles/components/_characterCard.scss
+++ b/src/styles/components/_characterCard.scss
@@ -6,24 +6,64 @@
         border-radius: rem(12);
         display: flex;
         justify-content: center;
+        align-items: center;
         align-self: center;
         margin: rem(10) 0 rem(10) 0;
+        @include for-tablet-up{
+            width: rem(200);
+            height: rem(240);
+        }
+        @include for-desktop-up{
+            width: rem(220);
+            height: rem(260);
+        }
     }
     &_img{
-        width: rem(100);
-        height: rem(100);
-        margin-top: rem(20);
-        border-radius: 50%;
-        align-self: center;
+        &-wrapper{
+            margin-top: rem(20); 
+            width: rem(102);   
+            
+        }
+        &-photo{
+            width: rem(102);
+            height: rem(102);
+            border-radius: 50%;
+            border: 2px solid $dark-blue;
+            @include for-tablet-up{
+                width: rem(132);
+                height: rem(132);
+            }
+            @include for-desktop-up{
+                width: rem(142);
+                height: rem(142);
+            }
+        } 
     }
-    &_name{
-        color:$light-green;
-        font-size: rem(16);
-        margin-top: rem(5);
-    }
-    &_specie{
-        color:$white;
-        margin-bottom: rem(20);
-        font-size: rem(13);
+    &_info{
+        &-name{
+            color:$light-green;
+            font-size: rem(11);
+            margin-top: rem(5);
+            font-family: $seymour;
+            @include for-tablet-up{
+                font-size: rem(13);
+            }        
+            @include for-desktop-up{
+                font-size: rem(18);
+            }
+        }
+        &-specie{
+            color:$white;
+            margin-bottom: rem(20);
+            margin-top: rem(5);
+            font-size: rem(9);
+            font-family: $seymour;
+            @include for-tablet-up{
+                font-size: rem(11);
+            }
+            @include for-desktop-up{
+                font-size: rem(15);
+            }
+        }
     }
 }
