--- a/src/styles/components/_characterDetail.scss
+++ b/src/styles/components/_characterDetail.scss
@@ -10,37 +10,39 @@
 .character_detail{
     &-card{
         background-color: $blue;
-        width: 50%;
-        height: rem(250);
+        width: 60%;
+        height: rem(280);
         display: flex;
         flex-direction: column;
         border-radius: rem(7);
         margin-top: rem(35);
         @include for-tablet-up{
             flex-direction: row;
-            width: 65%;
+            width: 75%;
             height: rem(300);
         }
         @include for-desktop-up{
             height: rem(350); 
+            margin-top: rem(55);
         }
     }
     
     &-image{
-        width: rem(120);
-        height: rem(120);
+        width: rem(122);
+        height: rem(122);
         margin-top: rem(20);
         border-radius: 50%;
+        border: 2px solid $dark-blue;
         align-self: center;
         @include for-tablet-up{
-            width: rem(200);
-            height: rem(200);
+            width: rem(202);
+            height: rem(202);
             margin-top: rem(0);
             margin-left: rem(30);
         }
         @include for-desktop-up{
-            width: rem(250);
-            height: rem(250);
+            width: rem(252);
+            height: rem(252);
         }
     }
 }
@@ -60,22 +62,30 @@
     &-name{
         color:$light-green;
         padding-top: rem(20);
-        font-size: rem(22);
+        margin-bottom: rem(9);
+        font-size: rem(18);
+        font-family: $seymour;
         @include for-tablet-up{
             padding-top: rem(0);
             font-size: rem(30);  
         }
         @include for-desktop-up{
             font-size: rem(50);
+            margin-bottom: rem(20);
         }
     }
     &-status, &-specie{
         color:$white;
+        font-family: $seymour;
+        font-size: rem(14);
+        line-height: rem(20);
         @include for-tablet-up{
             font-size: rem(20);
+            line-height: rem(28);
         }
         @include for-desktop-up{
             font-size: rem(30);
+            line-height: rem(37);
         }
     }
 }
