Add background image and favicon

--- a/src/styles/components/_characterDetail.scss
+++ b/src/styles/components/_characterDetail.scss
@@ -1,5 +1,5 @@
 .detail-wrapper{
-    background-color: $black;
+    background: url(../../img/back1.jpg) center ;
     width: 100%;
     height: 100vh;
     display: flex;
