--- a/src/styles/components/_characterDetail.scss
+++ b/src/styles/components/_characterDetail.scss
@@ -7,6 +7,21 @@
     align-items: center;
 }
 
+.back_btn{
+    background-color: $blue;
+    width: rem(50);
+    height: rem(30);
+    border-radius: rem(5);
+    text-align: center;
+    line-height: rem(30);
+    color: $dark-blue;
+    font-weight: bold;
+    margin-top: rem(30);
+    margin-bottom: rem(5);
+    font-family: $seymour;
+    font-size: rem(10);
+}
+
 .character_detail{
     &-card{
         background-color: $blue;
@@ -15,7 +30,7 @@
         display: flex;
         flex-direction: column;
         border-radius: rem(7);
-        margin-top: rem(35);
+        margin-top: rem(10);
         @include for-tablet-up{
             flex-direction: row;
             width: 75%;
