--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,4 +1,7 @@
 .home_wrapper{
-    width: 100%;
-    background: url(../../img/back1.jpg) center;
+    background-image: url(../../img/back1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
